dynamix/force-app/main/default/objects/Pricing_Plan_Components__c/Pricing_Plan_Components__c.object-meta.xml
<CustomObject>
    <label>Pricing Plan Component</label>
    <nameField>
        <label>Pricing Plan Components Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Plan Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>