dynamix/force-app/main/default/objects/Pricing_Plan_Components__c/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <label>Component Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic Price</fullName>
            </value>
            <value>
                <fullName>Floor Rise</fullName>
            </value>
            <value>
                <fullName>Stamp Duty</fullName>
            </value>
            <value>
                <fullName>Registration Charges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>