dynamix/force-app/main/default/objects/Pricing_Plan_Components__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZPR0</fullName>
                <label>Flat material</label>
            </value>
            <value>
                <fullName>ZCPR</fullName>
                <label>Car Parking</label>
            </value>
            <value>
                <fullName>ZLC0</fullName>
                <label>Legal Charges</label>
            </value>
            <value>
                <fullName>ZWEC</fullName>
                <label>Utility conn. Charge</label>
            </value>
            <value>
                <fullName>ZSF0</fullName>
                <label>Society Formation</label>
            </value>
            <value>
                <fullName>ZSAM</fullName>
                <label>Share Appl Money</label>
            </value>
            <value>
                <fullName>ZSD1</fullName>
                <label>Security Deposit</label>
            </value>
            <value>
                <fullName>ZREG</fullName>
                <label>Registration Charge</label>
            </value>
            <value>
                <fullName>ZSDT</fullName>
                <label>Stamp Duty</label>
            </value>
            <value>
                <fullName>ZCPA</fullName>
                <label>Additional Car Parking</label>
            </value>
            <value>
                <fullName>ZCLS</fullName>
                <label>Large Car Parkspace</label>
            </value>
            <value>
                <fullName>ZCSS</fullName>
                <label>Small Car Parkspace</label>
            </value>
            <value>
                <fullName>ZCP1</fullName>
                <label>Car Parking 1</label>
            </value>
            <value>
                <fullName>ZCP2</fullName>
                <label>Car Parking 2</label>
            </value>
            <value>
                <fullName>Base</fullName>
                <isActive>false</isActive>
                <label>Base</label>
            </value>
            <value>
                <fullName>Feature</fullName>
                <isActive>false</isActive>
                <label>Feature</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>