dynamix/force-app/main/default/objects/Pricing_Plan_Components__c/fields/GST_Treatment__c.field-meta.xml
<CustomField>
    <fullName>GST_Treatment__c</fullName>
    <label>GST Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>1%</fullName>
            </value>
            <value>
                <fullName>3%</fullName>
            </value>
            <value>
                <fullName>5%</fullName>
            </value>
            <value>
                <fullName>12%</fullName>
            </value>
            <value>
                <fullName>18%</fullName>
            </value>
            <value>
                <fullName>28%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>