dynamix/force-app/main/default/objects/Pricing_Plan_Components__c/fields/Price_age__c.field-meta.xml
<CustomField>
    <fullName>Price_age__c</fullName>
    <label>Price %age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>