dynamix/force-app/main/default/objects/Pricing_Plan_Components__c/fields/Price_Lumpsum__c.field-meta.xml
<CustomField>
    <fullName>Price_Lumpsum__c</fullName>
    <label>Price (Lumpsum)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>