dynamix/force-app/main/default/objects/Pricing_Plan_Components__c/fields/Price_per_SQFT__c.field-meta.xml
<CustomField>
    <fullName>Price_per_SQFT__c</fullName>
    <label>Price (per SQFT.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>