dynamix/force-app/main/default/objects/Pricing_Plan_Components__c/fields/Pricing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Plan__c</fullName>
    <label>Pricing Plan</label>
    <referenceTo>Pricing_Plan__c</referenceTo>
    <relationshipLabel>Pricing Plan Components</relationshipLabel>
    <relationshipName>Pricing_Plan_Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>