dynamix/force-app/main/default/objects/Pricing_Plan_Components__c/fields/Project_Add_On_Charges__c.field-meta.xml
<CustomField>
    <fullName>Project_Add_On_Charges__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Add On Charges</label>
    <referenceTo>Project_Add_On_Charges__c</referenceTo>
    <relationshipLabel>Pricing Plan Components</relationshipLabel>
    <relationshipName>Pricing_Plan_Components</relationshipName>
    <type>Lookup</type>
</CustomField>