dynamix/force-app/main/default/objects/Pricing_Plan_Components__c/validationRules/Enter_Either_Price_Lumpsum_or_Price_Sqft.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_Either_Price_Lumpsum_or_Price_Sqft</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Price_Lumpsum__c)), 
NOT(ISBLANK(Price_per_SQFT__c)))</errorConditionFormula>
    <errorMessage>Please enter either Price lumpsum or Price Sqft</errorMessage>
</ValidationRule>