dynamix/force-app/main/default/objects/Pricing_Plan_Components__c/validationRules/Price_lumpsum_and_Price_Sqft.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_lumpsum_and_Price_Sqft</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISBLANK(Price_Lumpsum__c),ISBLANK(Price_per_SQFT__c))</errorConditionFormula>
    <errorMessage>Please enter Price lumpsum or Price Sqft</errorMessage>
</ValidationRule>